# web-server-abstraction

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: copilot-instructions.md
examples/: actix_web_server.rs  advanced_demo.rs  advanced_routing_demo.rs  auth_integrated_mountable_demo.rs  axum_server.rs  basic_server.rs  benchmark_suite.rs  comprehensive_demo.rs  full_featured_demo.rs  mountable_interfaces_demo.rs
src/: auth.rs  benchmarks.rs  config.rs  content.rs  core.rs  cross_platform_testing.rs  database.rs  enhanced_middleware.rs  error.rs  ffi.rs  lib.rs  middleware.rs  monitoring.rs  mountable.rs  performance.rs  routing.rs  security.rs  session.rs  state.rs  static_files.rs  types.rs
src/adapters/: actix_web.rs  axum.rs  mock.rs  mod.rs  poem.rs  rocket.rs  salvo.rs  warp.rs
src/core/: tests.rs
src/types/: tests.rs
static/: style.css
tests/: integration_tests.rs
