[package]
name = "web-server-abstraction"
version = "1.0.1"
edition = "2024"
authors = ["Eric Evans <ciresnave@gmail.com>"]
description = "An ergonomic abstraction layer over popular Rust web frameworks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ciresnave/web-server-abstraction"
keywords = ["web", "server", "framework", "abstraction", "tower"]
categories = ["web-programming", "network-programming"]

[features]
default = ["axum"]
axum = ["dep:axum", "dep:tower", "dep:tower-http"]

# Framework adapters currently being updated for new framework versions
# These features are available but adapters may have limited functionality
actix-web = ["dep:actix-web"]
rocket = ["dep:rocket"]
warp = ["dep:warp"]
salvo = ["dep:salvo"]
poem = ["dep:poem"]

[dependencies]
# Core dependencies - always included
async-trait = "0.1"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
bytes = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
urlencoding = "2.1"
thiserror = "1.0"
mime = "0.3"
mime_guess = "2.0"
sha1 = "0.10"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
flate2 = "1.0"

# Authentication & Authorization - core to the abstraction
auth-framework = { version = "0.4.2" }

# Constrain sqlx to a stable-compatible version (auth-framework pulls this in)
sqlx = { version = "0.7", default-features = false }

# Tower ecosystem - included by default for core functionality
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = ["trace"] }

# Framework-specific dependencies (optional)
axum = { version = "0.8", optional = true }

# Framework adapters being updated for latest framework versions
# These features are available but some implementations may be incomplete
actix-web = { version = "4.9", optional = true }
rocket = { version = "0.5", optional = true, features = ["json"] }
warp = { version = "0.4", optional = true }
salvo = { version = "0.82", optional = true }
poem = { version = "3.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
